change the footer

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -4,8 +4,11 @@
       <div class="text-center sm:text-left">
         <p class="mt-0 text-sm">{{ .Site.Copyright }}</p>
         <p class="mt-0 text-xs">
+          Built with Hugo v{{ .Site.Hugo.Version }}
+          <!--
           Built with <a href="https://gohugo.io" target="_blank" rel="noopener noreferrer">Hugo</a> v{{ .Site.Hugo.Version }}
           and <a href="https://github.com/mivinci/hugo-theme-minima" target="_blank" rel="noopener noreferrer">Minima</a>
+          -->
         </p>
       </div>
       
