--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,4 +1,7 @@
 {{ define "main" }}
+<div class="toc-div desktop-only">
+  {{ .TableOfContents }}
+</div>
 <div class="container mx-auto">
   <h1 class="text-4xl font-extrabold mt-6 mb-6">{{ .Title }}</h1>
   <div class="mb-3 text-sm flex justify-between ">
@@ -29,4 +32,11 @@
   </main>
   {{ partial "plugin.html" . }}
 </div>
+<script src="<https://cdn.jsdelivr.net/npm/gumshoejs@5.1.2/dist/gumshoe.min.js>"></script>
+  <script>
+    var spy = new Gumshoe('#TableOfContents a', {
+        nested: true,
+        nestedClass: 'active'
+      });
+  </script>
 {{ end }}
