--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -21,7 +21,8 @@
   <!-- styles -->
   {{ $options := (dict "targetPath" "minima.css" "outputStyle" "compressed" "enableSourceMap" true) }}
   {{ $style := resources.Get "css/main.scss" | resources.ExecuteAsTemplate "main.scss" . | css.Sass $options | fingerprint }}
-  <link rel="stylesheet" href="{{ $style.RelPermalink }}" integrity="{{ $style.Data.Integrity }}">
+  <!--<link rel="stylesheet" href="{{ $style.RelPermalink }}" integrity="{{ $style.Data.Integrity }}">-->
+  <link rel="stylesheet" href="{{ $style.RelPermalink }}" integrity="">
   <!-- scripts -->
   {{ $options = (dict "targetPath" "minima.js" "minify" true "params" site.Params) }}
   {{ $script := resources.Get "js/main.js" | js.Build $options | fingerprint }}
