--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -32,7 +32,7 @@
   </main>
   {{ partial "plugin.html" . }}
 </div>
-<script src="<https://cdn.jsdelivr.net/npm/gumshoejs@5.1.2/dist/gumshoe.min.js>"></script>
+<script src="https://cdn.jsdelivr.net/npm/gumshoejs@5.1.2/dist/gumshoe.min.js"></script>
   <script>
     var spy = new Gumshoe('#TableOfContents a', {
         nested: true,
