--- a/assets/css/atom.scss
+++ b/assets/css/atom.scss
@@ -35,7 +35,16 @@ $screens: ("", 0), (sm\:, 640px);
 
     .#{$k}text-left { text-align: left; }
 
-    .#{$k}w-48 { width: 36rem; } /* 12rem change to 36rem */
+    /* .#{$k}w-48 { width: 36rem; }  */
+    /* 移动端样式（小于 768px 的屏幕） */
+    @media (max-width: 768px) {
+        .#{$k}w-48 { width: 12rem; }
+    }
+
+    /* 桌面端样式 */
+    @media (min-width: 769px) {
+        .#{$k}w-48 { width: 36rem; } /* 12rem change to 36rem */
+    }
 
     .#{$k}w-40 { width: 10rem; }
   }
