--- a/layouts/index.html
+++ b/layouts/index.html
@@ -5,7 +5,7 @@
     <img class="w-48 rounded-lg mt-1" src="{{ .Site.Params.Author.Avatar }}" alt="avatar">
     <div class="text-center sm:text-left">
       <h2 class="text-3xl font-bold mb-2" style="line-height: 1;">{{ .Site.Params.greet }}</h2>
-      <p class="mt-0 mb-0">{{ .Site.Params.author.status }}</p>
+      <p class="mt-0 mb-0">{{ .Site.Params.author.status }}<a href="https://www.beesignallabs.com/" target="_blank">BeeSignalLabs</a></p>
       <p class="mt-3 mb-3 home-intro">{{ .Site.Params.Author.description | markdownify | safeHTML }}</p>
     </div>
   </div>
